--- a/hr/templates/hr/leave/leave_type_list.html
+++ b/hr/templates/hr/leave/leave_type_list.html
@@ -67,7 +67,7 @@
                     "orderable": false,
                     "searchable": false,
                     "render": function (data, type, row, meta) {
-                        return meta.row + 1; // Serial number, starts from 1
+                        return meta.row + meta.settings._iDisplayStart + 1;
                     }
                 },
                 {"data":"name"},
