--- a/hr/templates/hr/payroll/salaryitem_list.html
+++ b/hr/templates/hr/payroll/salaryitem_list.html
@@ -15,9 +15,9 @@
             <div class="card">
                 <div class="card-body">
                    <p>
-                    <a href="{% url 'salarygrade-add' %}">
+                    <a href="{% url 'salaryitem-add' %}">
                         <button type="button" class="btn btn-info rounded-pill waves-effect waves-light">
-                            <span class="btn-label"><i class="mdi mdi-plus-circle"></i></span>New Grade
+                            <span class="btn-label"><i class="mdi mdi-plus-circle"></i></span>New Salary Item
                         </button>
                        </a>
                     </p>
@@ -26,10 +26,13 @@
                         <thead>
                           <tr>
                               <th>#</th>
-                              <th>Grade</th>
-                              <th>Step</th>
-                              <th>Basic Salary</th>
-                              <th>No. Staff</th>
+                              <th>Name</th>
+                              <th>Condition</th>
+                              <th>Entry</th>
+                              <th>Rate Type</th>
+                              <th>Rate Amount</th>
+                              <th>Dependency</th>
+                              <th>Affected Staff</th>
                               <th>Created on</th>
                               <th>Actions</th>
                           </tr>
@@ -43,13 +46,13 @@
 
 {% block javascript %}
 <script>
-    $(document).ready(function() {
-
+    $(document).ready(function(){
+    
         $('#Table').DataTable({
             "processing": true,
             "serverSide": true,
             "ajax": {
-                "url": "{% url 'salarygrade-list-api' %}",
+                "url": "{% url 'salaryitem-list-api' %}",
                 "type": "GET"
             },
             "columns": [
@@ -61,22 +64,32 @@
                         return meta.row + meta.settings._iDisplayStart + 1;
                     }
                 },
-                {"data":"grade"},
-                { "data": "step" },
-                { "data": "amount" },
-                {"data": "employee_count"},
+                { "data":"item_name"},
+                { "data": "alias_name" },
+                { "data": "entry" },
+                { "data": "rate_type" },
+                { "data": "rate_amount" },
+                { "data": "rate_dependency" },
+                { "data": "affected_employees" },
+              
                 { "data": "created_at" },
                 { "data": 'id', "orderable": false, "render": function(data, type, row) {
                  const id = row.id
 
-                 const updateURL = `{% url 'salarygrade-update' 0 %}`.replace('0', id)
-                 const deleteURL = `{% url 'salarygrade-delete' 0 %}`.replace('0', id)
-                 const staffURL = `{% url 'salarygrade-employee' 0 %}`.replace('0', id)
+                 const updateURL = `{% url 'salaryitem-update' 0 %}`.replace('0', id)
+                 const deleteURL = `{% url 'salaryitem-delete' 0 %}`.replace('0', id)
+                
+                 const staffURL = `{% url 'salaryitem-employee' 0 %}`.replace('0', id)
+                 const variableURL = `{% url 'salaryitem-variable' 0 %}`.replace('0', id)
+                 let url = ''
+                 if(row.rate_type == 'Variable'){
+                    url = `<a href="${variableURL}" title="set salary item employees variable"><button class="btn btn-xs btn-outline-info rounded-pill waves-effect waves-light"><i class="fas fa-user-plus"></i></button></a>`
+                 }
 
                     return `
-                           <a href="${updateURL}" title="Edit salary grade"><button class="btn btn-xs btn-outline-warning rounded-pill waves-effect waves-light"><i class="fe-edit"></i></button></a>
-                           <a href="${staffURL}" title="Employees on this grade"><button class="btn btn-xs btn-outline-success rounded-pill waves-effect waves-light"><i class="fas fa-users"></i></button></a>
-         
+                           <a href="${updateURL}" title="Edit salary item"><button class="btn btn-xs btn-outline-warning rounded-pill waves-effect waves-light"><i class="fe-edit"></i></button></a>
+                           <a href="${staffURL}" title="salary item employees"><button class="btn btn-xs btn-outline-success rounded-pill waves-effect waves-light"><i class="fas fa-users"></i></button></a>
+                           ${url}
                            <a href="${deleteURL}" title="Delete salary grade"><button class="btn btn-xs btn-outline-danger rounded-pill waves-effect waves-light"><i class="fe-trash-2"></i></button></a>`;                 
     
                 }},
@@ -84,6 +97,8 @@
             "order": [[4, "desc"]]  // Default sorting by "created_at"
         });
 
-    });
+        
+
+    })
 </script>
 {% endblock %}
