--- a/core/templates/core/menu/sidebar.html
+++ b/core/templates/core/menu/sidebar.html
@@ -124,6 +124,12 @@
                   </li>
 
                   <li class="menu-item">
+                    <a href="{% url 'designation-list' %}" class="menu-link">
+                      <span class="menu-text">Designations</span>
+                    </a>
+                  </li>
+
+                  <li class="menu-item">
                     <a href="{% url 'job-list' %}" class="menu-link">
                       <span class="menu-text">Jobs</span>
                     </a>
@@ -154,10 +160,29 @@
                       <span class="menu-text">Grades</span>
                     </a>               
                   </li>
+                 
                   <li class="menu-item">
                     <a href="{% url 'setup-tax' %}" class="menu-link">
                       <span class="menu-text">Setup Tax</span>
                     </a>               
+                  </li>
+
+                  <li class="menu-item">
+                    <a href="{% url 'salaryitem-list' %}" class="menu-link">
+                      <span class="menu-text">Salary Items</span>
+                    </a> 
+                  </li>
+
+                  <li class="menu-item">
+                    <a href="" class="menu-link">
+                      <span class="menu-text">Loans</span>
+                    </a> 
+                  </li>
+
+                  <li class="menu-item">
+                    <a href="" class="menu-link">
+                      <span class="menu-text">Credit Unions</span>
+                    </a> 
                   </li>
 
                 </ul>
