--- a/hr/templates/hr/employee/employee_detail.html
+++ b/hr/templates/hr/employee/employee_detail.html
@@ -11,7 +11,7 @@
                 alt="profile-image">
 
                 <h4 class="mb-0">{{ employee }} - {{ employee.employee_id }}</h4>
-                <p class="text-muted">@{{ employee.job.job_title}}</p>
+                <p class="text-muted">@{{ employee.job.job_title}} ({{ employee.get_employment_type_display }})</p>
                 {% comment %} <p class="text-muted"><i class="mdi mdi-office-building"></i> {{ employee.job.department }} Dept.</p> {% endcomment %}
 
                 <h5 class="mb-3 mt-4 text-uppercase bg-light p-2"><i class="mdi mdi-account-circle me-1"></i> Personal Information</h5>
@@ -34,6 +34,8 @@
                     <p class="text-muted mb-2 font-13"><strong>TIN :</strong> <span class="ms-2">{{employee.tin|default:'-'}}</span></p>
 
                     <p class="text-muted mb-2 font-13"><strong>Skills :</strong> <span class="ms-2">{{ employee.display_employee_skill }}</span></p>
+                   
+                    <p class="text-muted mb-2 font-13"><strong>Missing Skills :</strong> <span class="ms-2">{{ employee.missing_skills }}</span></p>
 
 
                     <p class="text-muted mb-2 font-13"><strong>Added :</strong> <span class="ms-2">{{employee.created_at|date:'d M, Y'}}</span></p>
@@ -53,7 +55,7 @@
 
                     <p class="text-muted mb-2 font-13"><strong>Salary Grade :</strong> <span class="ms-2">{{employee.salary_grade.grade}}</span></p>
 
-                    <p class="text-muted mb-1 font-13"><strong>Step :</strong> <span class="ms-2"> {{employee.salary_grade.step}}</span></p>
+                    <p class="text-muted mb-1 font-13"><strong>Step :</strong> <span class="ms-2"> {{employee.salary_grade.grade_step}}</span></p>
                 </div>
 
                 <h5 class="mb-3 mt-4 text-uppercase bg-light p-2"><i class="mdi mdi-account-circle me-1"></i> Bank Information</h5>
